quiz controller added

--- a/demo/demo/src/main/resources/application.properties
+++ b/demo/demo/src/main/resources/application.properties
@@ -5,3 +5,19 @@ spring.datasource.username=postgres
 spring.datasource.password=9424224082
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Root logging level
+logging.level.root=INFO
+
+# Spring Web (controllers, filters)
+logging.level.org.springframework.web=DEBUG
+
+# Exception handling
+logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
+
+# Hibernate / JPA
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+# Transaction management
+logging.level.org.springframework.transaction=DEBUG
