--- a/demo/demo/src/main/resources/application.properties
+++ b/demo/demo/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 #spring.application.name=demo
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/ml_project
-spring.datasource.username=postgres
-spring.datasource.password=9424224082
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ml_project
+#spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/ml_project
+#spring.datasource.username=postgres
+#spring.datasource.password=9424224082
+spring.jpa.hibernate.ddl-auto=none
+server.address=0.0.0.0
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Root logging level
