--- a/demo/demo/docker-compose.yml
+++ b/demo/demo/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - "8080:8080"
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/ml_project
+#      SPRING_DATASOURCE_URL: jdbc:postgresql://host.docker.internal:5432/ml_project
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: 9424224082
 
