--- a/demo/demo/src/main/resources/application.properties
+++ b/demo/demo/src/main/resources/application.properties
@@ -4,8 +4,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/ml_project
 #spring.datasource.username=postgres
 #spring.datasource.password=9424224082
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 server.address=0.0.0.0
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Root logging level
