mock-payment architecture added

--- a/Quiz/src/main/resources/application.properties
+++ b/Quiz/src/main/resources/application.properties
@@ -8,5 +8,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+valid.cardNumber.list=4111111111111111,5454545454545454
+invalid.cardNumber.list=4917484589897107
 
 
