--- a/Quiz/src/main/resources/application.properties
+++ b/Quiz/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 valid.cardNumber.list=4111111111111111,5454545454545454
-invalid.cardNumber.list=4917484589897107
-
+invalid.cardNumber.list=4917484589897107    
+spring.jwt.secretkey=xanaxnaxnxanxasasasasaaaaaaaaasasasasasaadadada
+spring.jwt.expiration=1201209
 
