handle interceptor with webmvcconfigurer added

--- a/Quiz/src/main/resources/application.properties
+++ b/Quiz/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 valid.cardNumber.list=4111111111111111,5454545454545454
 invalid.cardNumber.list=4917484589897107    
 spring.jwt.secretkey=xanaxnaxnxanxasasasasaaaaaaaaasasasasasaadadada
-spring.jwt.expiration=1201209
+spring.jwt.expiration=12012
 
