Initial Commit : redis cache implemented

--- a/Quiz/src/main/resources/application.properties
+++ b/Quiz/src/main/resources/application.properties
@@ -12,4 +12,7 @@ valid.cardNumber.list=4111111111111111,5454545454545454
 invalid.cardNumber.list=4917484589897107    
 spring.jwt.secretkey=xanaxnaxnxanxasasasasaaaaaaaaasasasasasaadadada
 spring.jwt.expiration=12012
+spring.cache.type=redis
+spring.data.redis.host=127.0.0.1
+spring.data.redis.port=6379
 
