--- a/Quiz/src/main/resources/application.properties
+++ b/Quiz/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 valid.cardNumber.list=4111111111111111,5454545454545454
 invalid.cardNumber.list=4917484589897107    
 spring.jwt.secretkey=xanaxnaxnxanxasasasasaaaaaaaaasasasasasaadadada
-spring.jwt.expiration=1201201
+spring.jwt.expiration=900000
 spring.cache.type=redis
 spring.data.redis.host=127.0.0.1
 spring.data.redis.port=6379
